<resources>
    <string name="app_name">MantAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Developer">Developer</string>
    <string name="string_hint_username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account !</string>
    <string name="sign_in">SIGN IN</string>
    <string name="silahkan_login_untuk_memakai_aplikasi">Silahkan Login Untuk Memakai Aplikasi</string>
    <string name="string_img_logo">Logo</string>
</resources>