<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/string_img_logo"
            android:id="@+id/imgLogo"
            android:background="@drawable/logotext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

            <TextView
                android:textAlignment="center"
                android:layout_below="@+id/imgLogo"
                android:id="@+id/tvSilahkan"
                android:text="@string/silahkan_login_untuk_memakai_aplikasi"
                android:layout_marginBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
            android:inputType="text"
            android:autofillHints="username"
            android:hint="@string/string_hint_username"
            android:id="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvSilahkan"
            android:drawableStart="@drawable/ic_username"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textPassword"
            android:autofillHints="password"
            android:hint="@string/password"
            android:id="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/etUsername"
            android:drawableStart="@drawable/ic_password"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in"
            android:onClick="clicklogin"
            android:hint="@string/sign_in"/>

        <TextView
            android:id="@+id/tvCreateAccount"
            android:textAlignment="center"
            android:layout_below="@id/btnLogin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:text="@string/create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>




    </RelativeLayout>

</LinearLayout>